# Weather-radar

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  docker_compose.yml  pipeline.py  pyproject.toml  test.py
services/adminer/: docker-compose.yml
services/apache/: docker-compose.yaml
services/apache/config/: airflow.cfg
services/api/: Dockerfile  docker-compose.yml  requirements.txt
services/api/src/: config.py  db.py  gibs.py  main.py  tile_cache.py
services/extractor-openmeteo/: Dockerfile  crontab  docker-compose.yml  entrypoint.sh  requirements.txt
services/extractor-openmeteo/src/: client.py  config.py  load.py  main.py  transform.py
services/extractor_openmeteo/: docker-compose.yml
services/extractor_openmeteo/src/: config.py
services/minio/: docker-compose.yml
services/postgres/: docker-compose.yml  init.sh
services/postgres/scripts/: 01_extensions.sql  02_schemas.sql  03_openmeteo.raw.sql
