[project]
name = "radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.24",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "requests-cache>=1.3.2",
    "retry-requests>=2.0.0",
]
